# fotz

./: .gitignore  Cargo.toml  README.md  mix.exs
lib/: fotz.ex
lib/fotz/: exif.ex  files.ex  format.ex  gps.ex  process.ex
src/: main.rs
test/: fotz_test.exs
test/_samples/: api_response.json
test/fotz/: exif_test.exs  files_test.exs  format_test.exs  gps_test.exs
