[package]
name = "fotz"
version = "0.1.0"
authors = ["Éber F. Dias <eber.freitas@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = "~2.33.3"
glob = "~0.3.0"
is_executable = "~0.1.2"
serde_json = "~1.0.61"
